# XP3Forex

./: .env.example  .gitignore  DAILY_ANALYSIS_USAGE.md  DAILY_SCHEDULING_GUIDE.md  IMPLEMENTACAO_COMPLETA.md  MIGRATION_REPORT.md  MT5_STARTUP_SECTOR_FILTER.md  Melhorias.txt  QUICK_FIX_ERROR_10013.md  README.md  RESUME_TRADING.txt  ReportHistory-52659795.html  acheoerro.py  adaptive_engine.py  auto_reporter.py  bot.bat  bot_forex.py  bot_heartbeat.timestamp  bot_state.json.backup  bot_watchdog.py  calculate_notional.py  calendar_exporter.mq5  check_calls.py  check_columns.py  check_db.py  check_paths.py  check_positions_mt5.py  close_all.py  config_forex.py  config_forex_wrapper.py  daily_analysis_bot_patch.py  daily_analysis_config_additions.py  daily_analysis_logger.py  daily_bot_integration.py  daily_market_analysis.py  daily_schedule.json  daily_scheduler.py  daily_selected_pairs.json  dashboard.bat  dashboard.py  (+52 more)
.tmp.driveupload/: 175698  175814  175816  175818  175820  175844  175852  175856  175860  175864  175868  175872  175876  175880  175884  175888  175892  175896  175904  175908  175912  175916  175920  175924  175930  175932  175936  175940  175944  175948  175979  175983  175987  175991  175995  175999  176001  176003  176007  176011  (+1628 more)
docs/: ERROR_10013_FIX.md
examples/: why_report_demo.py
legacy/: asset_selection.py  audit_elite_params.py  bot.bat  bot_forex_wrapper.py  bot_watchdog.py  build_xp3_single.py  check_calls.py  config_mock.py  daily_analysis_logger.py  daily_pair_loader.py  despause.py  mt5_instance_forex.py  mt5_sector_filter.py  news_calendar.py  otimizador_semanal_forex.py  otimizador_semanal_forex_v01.py  semdog.bat  symbol_map_corrigido.txt  test_numba_sanity.py  update_asset_rankings.py  utils_forex.py  utils_mock.py  validation_forex.py
scripts/: check_account_status.py  db_recovery_sync.py  quant_diagnostic.py  run_learning.py  test_order_check.py  test_session.py  test_telegram.py  timeframe_study.py  verify_execution.py
src/: monitor.py  run_bot.py  (+1 more)
(+54 files in other folders)
